--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "postversion": "react-native-version"
   },
   "dependencies": {
-    "@expo/react-native-action-sheet": "^3.6.0",
+    "@expo/react-native-action-sheet": "^3.9.0",
     "@kebetoo/camera-roll-picker": "^1.0.7",
-    "@react-native-community/async-storage": "^1.9.0",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/audio-toolkit": "^2.0.3",
-    "@react-native-community/cameraroll": "^4.0.1",
+    "@react-native-community/cameraroll": "^4.0.4",
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.8",
     "@react-native-community/netinfo": "^5.7.1",
-    "@react-native-community/push-notification-ios": "^1.6.1",
+    "@react-native-community/push-notification-ios": "^1.8.0",
     "@react-native-firebase/analytics": "<10.0.0",
     "@react-native-firebase/app": "^8.4.7",
     "@react-native-firebase/auth": "<10.0.0",
@@ -36,42 +36,42 @@
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
-    "dayjs": "^1.8.27",
-    "emoji-datasource": "^5.0.1",
+    "dayjs": "^1.10.4",
+    "emoji-datasource": "^6.0.1",
     "hermes-engine": "0.5.2-rc1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-action-button": "^2.8.5",
     "react-native-background-timer": "^2.4.1",
-    "react-native-bootsplash": "^3.1.2",
+    "react-native-bootsplash": "^3.2.0",
     "react-native-convert-ph-asset": "^1.0.3",
-    "react-native-device-info": "^6.0.4",
-    "react-native-dotenv": "^2.4.2",
+    "react-native-device-info": "^8.0.7",
+    "react-native-dotenv": "^2.5.3",
     "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-gifted-chat": "^0.16.3",
-    "react-native-image-crop-picker": "^0.35.2",
+    "react-native-image-crop-picker": "^0.36.0",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-keyboard-aware-scroll-view": "^0.9.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-localization": "^2.1.6",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-parsed-text": "^0.0.22",
-    "react-native-permissions": "^2.1.4",
-    "react-native-popover-view": "^3.0.3",
-    "react-native-push-notification": "^7.1.1",
+    "react-native-permissions": "^3.0.1",
+    "react-native-popover-view": "^3.1.1",
+    "react-native-push-notification": "^7.2.3",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.4.0",
-    "react-native-share-menu": "^5.0.2",
-    "react-native-snackbar": "^2.3.0",
+    "react-native-share-menu": "^5.0.3",
+    "react-native-snackbar": "^2.4.0",
     "react-native-sound": "^0.11.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-typography": "^1.4.1",
     "react-native-ui-lib": "^5.14.0",
-    "react-native-vector-icons": "^8.0.0",
-    "react-native-video": "^5.1.0-alpha8",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.1.1",
     "react-native-video-controls": "^2.7.1",
     "react-native-view-more-text": "^2.1.0",
     "react-redux": "^7.2.0",
@@ -79,9 +79,9 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "rn-fetch-blob": "^0.12.0",
-    "rn-placeholder": "^3.0.0",
+    "rn-placeholder": "^3.0.3",
     "twitter-text": "^3.1.0",
-    "yup": "^0.28.3"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
