--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-native-typography": "^1.4.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
+    "react-native-video-cache": "^2.0.5",
     "react-native-video-controls": "^2.7.1",
     "react-native-view-more-text": "^2.1.0",
     "react-native-view-shot": "^3.1.2",
