--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,7 +12,7 @@ target 'Kebetoo' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
+  use_flipper!({'Flipper' => '0.79.0'})
   post_install do |installer|
     flipper_post_install(installer)
     react_native_share_menu_post_install(installer)
